trunk/Archive2/b8/a2035026a86b17/output
main.cpp:8:22: error: use of deleted function 'std::atomic<int>::atomic(const std::atomic<int>&)'
 atomic <int> counter=0;
                      ^
In file included from main.cpp:4:0:
/usr/local/include/c++/4.9.2/atomic:605:7: note: declared here
       atomic(const atomic&) = delete;
       ^
